--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Online Chess Game made with Phaser and Socket IO ",
   "main": "index.js",
   "scripts": {
+    "start": "node ./src/server/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -22,5 +23,11 @@
   "bugs": {
     "url": "https://github.com/AlejandroBlanco2001/Online-Chess-Game/issues"
   },
-  "homepage": "https://github.com/AlejandroBlanco2001/Online-Chess-Game#readme"
+  "homepage": "https://github.com/AlejandroBlanco2001/Online-Chess-Game#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "phaser": "^3.52.0",
+    "socket.io": "^3.0.5"
+  },
+  "devDependencies": {}
 }
