--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
   "dependencies": {
     "express": "^4.17.1",
     "phaser": "^3.52.0",
-    "socket.io": "^3.0.5"
+    "socket.io": "^3.0.5",
+    "socket.io-client": "^3.1.0"
   },
   "devDependencies": {}
 }
