--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Online Chess Game made with Phaser and Socket IO ",
   "main": "index.js",
   "scripts": {
-    "start": "node ./src/server/index.js",
+    "start": "nodemon ./src/server/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
